# gtkgreet-builder

./: README.md  config.example
gtkgreet/: actions.c  actions.h  config.c  config.h  gtkgreet.c  gtkgreet.h  main.c  meson.build  proto.c  uimodel.c  uimodel.h  window.c  window.h
